tests/parsing/smtlib/poly/errors/020_let_unclosed_2.psmt2
(set-logic ALL)
(assert (let ((x 42)) (= x 0) blabla))
