tests/parsing/smtlib/poly/errors/020_let_unclosed_2.expected
File "tests/parsing/smtlib/poly/errors/020_let_unclosed_2.psmt2", line 2, character 30-36:
Error while parsing a term, read the symbol 'blabla',
      but expected a closing parenthesis to end the let binding.
